xee-xslt-ast/tests/snapshots/snapshot_tests__apply_templates_explicit_mode.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:apply-templates mode=\"foo\" xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" select=\"*\"/>\"#)"
---
Ok(Instruction(ApplyTemplates(ApplyTemplates(
  select: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          AxisStep(AxisStep(
            axis: Child,
            node_test: NameTest(Star),
            predicates: [],
          )),
        ],
      )),
    ])),
    span: Span(
      start: 89,
      end: 90,
    ),
    namespaces: [
      LiteralNamespace(
        prefix: "xsl",
        uri: "http://www.w3.org/1999/XSL/Transform",
      ),
    ],
  ),
  mode: EqName(OwnedName(
    local_name_str: "foo",
    namespace_str: "",
    prefix_str: "",
  )),
  builtin_template_params_passthrough: true,
  content: [],
  span: Span(
    start: 1,
    end: 20,
  ),
))))
