xee-xslt-ast/tests/snapshots/snapshot_tests__apply_templates_implicit_default_mode_is_unnamed.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:apply-templates xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" />\"#)"
---
Ok(Instruction(ApplyTemplates(ApplyTemplates(
  select: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          AxisStep(AxisStep(
            axis: Child,
            node_test: KindTest(Any),
            predicates: [],
          )),
        ],
      )),
    ])),
    span: Span(
      start: 0,
      end: 0,
    ),
    namespaces: [],
  ),
  mode: Unnamed,
  builtin_template_params_passthrough: true,
  content: [],
  span: Span(
    start: 1,
    end: 20,
  ),
))))
