xee-xslt-ast/tests/snapshots/snapshot_tests__attribute_value_template_just_string.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:assert xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\" error-code=\"foo\">Hello</xsl:assert>\"#)"
---
Ok(Instruction(Assert(Assert(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: OwnedName(
              local_name_str: "true",
              namespace_str: "http://www.w3.org/2005/xpath-functions",
              prefix_str: "",
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 67,
      end: 73,
    ),
    namespaces: [
      LiteralNamespace(
        prefix: "xsl",
        uri: "http://www.w3.org/1999/XSL/Transform",
      ),
    ],
  ),
  select: None,
  error_code: Some(ValueTemplate(
    template: [
      String(
        text: "foo",
        span: Span(
          start: 87,
          end: 90,
        ),
      ),
    ],
    phantom: PhantomData,
  )),
  sequence_constructor: [
    Content(Text("Hello")),
  ],
  span: Span(
    start: 1,
    end: 11,
  ),
))))
