xee-xslt-ast/tests/snapshots/snapshot_tests__attributes_on_literal_element.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<p xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" foo=\"FOO\"/>\"#)"
---
Ok(Content(Element(ElementNode(
  name: OwnedName(
    local_name_str: "p",
    namespace_str: "",
    prefix_str: "",
  ),
  namespaces: [],
  use_attribute_sets: None,
  attributes: [
    (OwnedName(
      local_name_str: "foo",
      namespace_str: "",
      prefix_str: "",
    ), ValueTemplate(
      template: [
        String(
          text: "FOO",
          span: Span(
            start: 57,
            end: 60,
          ),
        ),
      ],
      phantom: PhantomData,
    )),
  ],
  sequence_constructor: [],
  span: Span(
    start: 1,
    end: 2,
  ),
))))
